# clonadic

./: .gitignore  CLAUDE.md  README.md  clonad-demo.cabal  clonadic.cabal  config.toml  flake.nix
app/: Main.hs
src/: Config.hs  Spreadsheet.hs
static/: index.html
