cabal-version:      3.0
name:               clonad-demo
version:            0.1.0.0
synopsis:           ClonadSheet - A spreadsheet where Claude evaluates every formula
description:
  Every formula evaluation is a prayer.
  What if Excel's formula engine was a large language model?

license:            BSD-3-Clause
author:             Jane Street Hackathon Team
build-type:         Simple

library
  exposed-modules:  Spreadsheet
  hs-source-dirs:   src
  default-language:  GHC2024
  build-depends:
      base           >= 4.14  && < 5
    , aeson          >= 2.0   && < 2.3
    , clonad
    , containers     >= 0.6   && < 0.8
    , text           >= 1.2   && < 2.2
  ghc-options:       -Wall

executable clonad-demo
  main-is:          Main.hs
  hs-source-dirs:   app
  default-language:  GHC2024
  build-depends:
      base           >= 4.14  && < 5
    , aeson          >= 2.0   && < 2.3
    , bytestring     >= 0.10  && < 0.13
    , clonad
    , clonad-demo
    , containers     >= 0.6   && < 0.8
    , http-types     >= 0.12  && < 0.13
    , scotty         >= 0.20  && < 0.23
    , stm            >= 2.5   && < 2.6
    , text           >= 1.2   && < 2.2
    , wai            >= 3.2   && < 3.3
    , wai-extra      >= 3.1   && < 3.2
    , wai-middleware-static >= 0.9 && < 0.10
  ghc-options:       -Wall -threaded -rtsopts -with-rtsopts=-N
